--- a/admin/index.html
+++ b/admin/index.html
@@ -23,8 +23,8 @@
                     <div class="col s12 l6">
                         <h1>Admin Login</h1>
                         <form id="loginForm">
-                            <input type="text" id="username" placeholder="Username" required autofocus name="username">
-                            <input type="password" id="password" placeholder="Password" required autofocus name="password">
+                            <div class="input-field"><label for="username">Username</label><input type="text" id="username" required autofocus name="username"></div>
+                            <div class="input-field"><label for="password">Username</label><input type="password" id="password" required autofocus name="password"></div>
                         </form>
                         <button type="submit" id="login"><i class="fas fa-sign-in-alt"></i> Login</button>
                         <div class="response"></div>
