--- a/admin/admins/index.html
+++ b/admin/admins/index.html
@@ -56,8 +56,8 @@
                         <div id="getPageSection">
                             <div class="filters">
                                 <form id="getPageForm">
-                                    Page: <input type="number" id="np" required name="np">
-                                    Users per page: <input type="number" id="rpp" required name="rpp">
+                                    <label for="np">Page:</label> <input type="number" id="np" required name="np">
+                                    <label for="rpp">Members per page:</label> <input type="number" id="rpp" required name="rpp">
                                 </form>
                                 <button type="submit" id="getPage">Apply <i class="fas fa-share-square"></i></button>
                             </div>
@@ -75,13 +75,14 @@
                         <div id="setSection">
                             <center>
                                 <form id="setForm">
-                                    <div class="input-field"><input type="text" id="name" required autofocus placeholder="Name" name="name" class="validate"></div>
-                                    <div class="input-field"><input type="email" id="mail" required  placeholder="Email" name="mail" class="validate"></div>
-                                    <div class="input-field"><input type="text" id="username" required  placeholder="Username" name="username" class="validate"></div>
-                                    <div class="input-field"><input type="password" id="password" required  placeholder="Password" name="password" class="validate"></div>
-                                    <div class="input-field"><input type="url" id="url"  placeholder="Site URL" name="url" class="validate"></div>
+                                    <div class="input-field"><label for="name">Name</label><input type="text" id="name" required autofocus name="name" class="validate"></div>
+                                    <div class="input-field"><label for="mail">Mail</label><input type="email" id="mail" required  name="mail" class="validate"></div>
+                                    <div class="input-field"><label for="username">Username</label><input type="text" id="username" required  name="username" class="validate"></div>
+                                    <div class="input-field"><label for="password">Password</label><input type="password" id="password" required name="password" class="validate"></div>
+                                    <div class="input-field"><label for="url">URL</label><input type="url" id="url" name="url" class="validate"></div>
                                     <button type="submit" id="set">Register New Admin <i class="fas fa-user-plus"></i></button> <button type="submit" class="back">Back to Admins List <i class="fas fa-undo-alt"></i></button>
                                 </form>
+                                <div id="setMessages"></div>
                             </center>
                         </div>
 
@@ -89,11 +90,11 @@
                             <center>
                                 <form id="setUpdateForm">
                                     <div class="hiddenInput"><input type="number" id="idUpdate" required name="id"></div>
-                                    <div class="input-field"><input type="text" id="nameUpdate" required autofocus placeholder="Name" name="name" class="validate"></div>
-                                    <div class="input-field"><input type="email" id="mailUpdate" required  placeholder="Email" name="mail" class="validate"></div>
-                                    <div class="input-field"><input type="text" id="usernameUpdate" required  placeholder="Username" name="username" class="validate"></div>
-                                    <div class="input-field"><input type="password" id="passwordUpdate" required  placeholder="Password" name="password" class="validate"></div>
-                                    <div class="input-field"><input type="url" id="urlUpdate"  placeholder="Site URL" name="url" class="validate"></div>
+                                    <div class="input-field"><label for="nameUpdate">Name</label><input type="text" id="nameUpdate" required autofocus placeholder="Name" name="name" class="validate"></div>
+                                    <div class="input-field"><label for="mailUpdate">E-Mail</label><input type="email" id="mailUpdate" required  placeholder="Email" name="mail" class="validate"></div>
+                                    <div class="input-field"><label for="usernameUpdate">Username</label><input type="text" id="usernameUpdate" required  placeholder="Username" name="username" class="validate"></div>
+                                    <div class="input-field"><label for="passwordUpdate">Password</label><input type="password" id="passwordUpdate" required  placeholder="Password" name="password" class="validate"></div>
+                                    <div class="input-field"><label for="urlUpdate">URL</label><input type="url" id="urlUpdate"  placeholder="Site URL" name="url" class="validate"></div>
                                     <button type="submit" id="setUpdate">Update <i class="fas fa-user-plus"></i></button> <button type="submit" class="back">Back to Admins List <i class="fas fa-undo-alt"></i></button>
                                 </form>
                                 <div id="setUpdateMessages"></div>
@@ -238,29 +239,34 @@
                     });
                 })
                 $("#set").click(function () {
-                    values = $("#setForm").serializeObject();
-                    values.password = forge_sha256($("#password").val());
-                    data = {"ob": "user", "op": "set", "json": JSON.stringify(values)};
-                    $.ajax({
-                        type: "POST",
-                        url: "http://127.0.0.1:8080/fanlist/server/Controller.php",
-                        data: data,
-                        dataType: "json",
-                        success: function (data) {
-                            if (data.status == 200) {
-                                $("#setForm")[0].reset();
-                                $("#setSection").hide();
-                                $("#setUpdateSection").hide();
-                                $("#response").show();
-                                $("#response").empty().append("<h3>Admin registered successfully</h3><br><br><button type=\"submit\" class=\"back\">Back to Admins List <i class=\"fas fa-undo-alt\"></i></button> ");
-                            } else {
-                                console.log("Error servidor get");
+                    validation = $("#setForm").find(".invalid");
+                    if (validation.length > 0 ){
+                        $("#setMessages").empty().append("Revisa los campos");
+                    } else {
+                        values = $("#setForm").serializeObject();
+                        values.password = forge_sha256($("#password").val());
+                        data = {"ob": "user", "op": "set", "json": JSON.stringify(values)};
+                        $.ajax({
+                            type: "POST",
+                            url: "http://127.0.0.1:8080/fanlist/server/Controller.php",
+                            data: data,
+                            dataType: "json",
+                            success: function (data) {
+                                if (data.status == 200) {
+                                    $("#setForm")[0].reset();
+                                    $("#setSection").hide();
+                                    $("#setUpdateSection").hide();
+                                    $("#response").show();
+                                    $("#response").empty().append("<h3>Admin registered successfully</h3><br><br><button type=\"submit\" class=\"back\">Back to Admins List <i class=\"fas fa-undo-alt\"></i></button> ");
+                                } else {
+                                    console.log("Error servidor get");
+                                }
+                            },
+                            error: function (data) {
+                                console.log("Error cliente get");
                             }
-                        },
-                        error: function (data) {
-                            console.log("Error cliente get");
-                        }
-                    });
+                        });
+                    }
                 })
                 $("#setUpdate").click(function () {
                     validation = $("#setUpdateForm").find(".invalid");
