--- a/admin/members/index.html
+++ b/admin/members/index.html
@@ -55,8 +55,8 @@
                         <div id="getPageSection">
                             <div class="filters">
                                 <form id="getPageForm">
-                                    Page: <input type="number" id="np" required name="np">
-                                    Members per page: <input type="number" id="rpp" required name="rpp">
+                                    <label for="np">Page:</label> <input type="number" id="np" required name="np">
+                                    <label for="rpp">Members per page:</label> <input type="number" id="rpp" required name="rpp">
                                 </form>
                                 <button type="submit" id="getPage">Apply <i class="fas fa-share-square"></i></button>
                             </div>
@@ -74,13 +74,13 @@
                         <div id="setSection">
                             <center>
                                 <form id="setForm">
-                                    <div class="input-field"><input type="text" id="username" required  placeholder="Username" name="username" class="validate"></div>
-                                    <div class="input-field"><input type="password" id="password" required  placeholder="Password" name="password" class="validate"></div>
-                                    <div class="input-field"><input type="text" id="name" required autofocus placeholder="Name" name="name" class="validate"></div>
-                                    <div class="input-field"><input type="email" id="mail" required  placeholder="Email" name="mail" class="validate"></div>
-                                    <div class="input-field"><label for="country">Country</label><select id="country" name="country"></select></div>
+                                    <div class="input-field"><label for="username">Username</label><input type="text" id="username" required name="username" class="validate"></div>
+                                    <div class="input-field"><label for="paddword">Password</label><input type="password" id="password" required name="password" class="validate"></div>
+                                    <div class="input-field"><label for="name">Name</label><input type="text" id="name" required autofocus name="name" class="validate"></div>
+                                    <div class="input-field"><label for="email">E-Mail</label><input type="email" id="mail" required  name="mail" class="validate"></div>
+                                    <div class="input-field"><label for="country" class="selectlabel">Country</label><select id="country" name="country"></select></div>
                                     <div class="input-field">
-                                        <label for="gender">Gender</label>
+                                        <label for="gender" class="selectlabel">Gender</label>
                                         <select id="gender" name="gender">
                                             <option value="unset">Unset</option>
                                             <option value="male">Male</option>
@@ -89,6 +89,7 @@
                                     </div>
                                     <button type="submit" id="set">Register New Member <i class="fas fa-user-plus"></i></button> <button type="submit" class="back">Back to Members List <i class="fas fa-undo-alt"></i></button>
                                 </form>
+                                <div id="setMessages"></div>
                             </center>
                         </div>
 
@@ -96,13 +97,13 @@
                             <center>
                                 <form id="setUpdateForm">
                                     <div class="hiddenInput"><input type="number" id="idUpdate" required name="id"></div>
-                                    <div class="input-field"><input type="text" id="usernameUpdate" required  placeholder="Username" name="username" class="validate"></div>
-                                    <div class="input-field"><input type="password" id="passwordUpdate" required  placeholder="Password" name="password" class="validate"></div>
-                                    <div class="input-field"><input type="text" id="nameUpdate" required autofocus placeholder="Name" name="name" class="validate"></div>
-                                    <div class="input-field"><input type="email" id="mailUpdate" required  placeholder="Email" name="mail" class="validate"></div>
-                                    <div class="input-field"><label for="country">Label</label><select id="countryUpdate" name="country"></select></div>
+                                    <div class="input-field"><label for="usernameUpdate">Username</label><input type="text" id="usernameUpdate" required  name="username" class="validate"></div>
+                                    <div class="input-field"><label for="passwordUpdate">Password</label><input type="password" id="passwordUpdate" required  name="password" class="validate"></div>
+                                    <div class="input-field"><label for="nameUpdate">Name</label><input type="text" id="nameUpdate" required autofocus name="name" class="validate"></div>
+                                    <div class="input-field"><label for="mailUpdate">E-Mail</label><input type="email" id="mailUpdate" required  name="mail" class="validate"></div>
+                                    <div class="input-field"><label for="countryUpdate" class="selectlabel">Label</label><select id="countryUpdate" name="country"></select></div>
                                     <div class="input-field">
-                                        <label for="gender">Gender</label>
+                                        <label for="genderUpdate" class="selectlabel">Gender</label>
                                         <select id="genderUpdate" name="gender">
                                             <option value="unset">Unset</option>
                                             <option value="male">Male</option>
@@ -192,9 +193,10 @@
 
             $(document).ready(function () {
                 $(function(){
-                    $.getJSON('http://127.0.0.1:8080/fanlist/html/admin/js/countries.json', function(result){
+                    $.getJSON('http://127.0.0.1:8080/fanlist/assets/js/countries.json', function(result){
                         $.each(result, function(i, country){
                             $('#country').append('<option value="' + country.name + '">' + country.name + '</option>')
+                            $('#countryUpdate').append('<option value="' + country.name + '">' + country.name + '</option>')
                         });
                     });
                 });
@@ -232,7 +234,7 @@
                     success: function (data) {
                         if (data.status == 200) {
                             for (i = 0; i < data.json.length; i++) {
-                                $("#members").append("<tr><td>" + data.json[i].name + "</td><td>" + data.json[i].mail + "</td><td>" + data.json[i].username + "</td><td>" + data.json[i].country + "</td><td><button type=\"submit\" class=\"get\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-eye\"></i></button> <button type=\"submit\" class=\"update\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-pencil-alt\"></i></button> <button type=\"submit\" class=\"remove\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-trash-alt\"></i></button></td></tr>");
+                                $("#members").append("<tr><td>" + data.json[i].name + "</td><td>" + data.json[i].username + "</td><td>" + data.json[i].mail + "</td><td>" + data.json[i].country + "</td><td><button type=\"submit\" class=\"get\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-eye\"></i></button> <button type=\"submit\" class=\"update\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-pencil-alt\"></i></button> <button type=\"submit\" class=\"remove\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-trash-alt\"></i></button></td></tr>");
                             }
                         } else {
                             console.log("Error servidor get");
@@ -255,7 +257,7 @@
                                 $("#pageName").empty().append("<i class=\"fas fa-users\"></i> Members - List");
                                 $("#admins").empty().append("<tr><th>Name</th><th>Username</th><th>Email</th><th>Country</th><th></th></tr>");
                                 for (i = 0; i < data.json.length; i++) {
-                                    $("#members").append("<tr><td>" + data.json[i].name + "</td><td>" + data.json[i].mail + "</td><td>" + data.json[i].username + "</td><td>" + data.json[i].country + "</td><td><button type=\"submit\" class=\"get\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-eye\"></i></button> <button type=\"submit\" class=\"update\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-pencil-alt\"></i></button> <button type=\"submit\" class=\"remove\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-trash-alt\"></i></button></td></tr>");
+                                    $("#members").append("<tr><td>" + data.json[i].name + "</td><td>" + data.json[i].username + "</td><td>" + data.json[i].mail + "</td><td>" + data.json[i].country + "</td><td><button type=\"submit\" class=\"get\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-eye\"></i></button> <button type=\"submit\" class=\"update\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-pencil-alt\"></i></button> <button type=\"submit\" class=\"remove\" id=\"" + data.json[i].id + "\"><i class=\"fas fa-trash-alt\"></i></button></td></tr>");
                                 }
                             } else {
                                 console.log("Error servidor get");
@@ -267,29 +269,34 @@
                     });
                 })
                 $("#set").click(function () {
-                    values = $("#setForm").serializeObject();
-                    values.password = forge_sha256($("#password").val());
-                    data = {"ob": "member", "op": "set", "json": JSON.stringify(values)};
-                    $.ajax({
-                        type: "POST",
-                        url: "http://127.0.0.1:8080/fanlist/server/Controller.php",
-                        data: data,
-                        dataType: "json",
-                        success: function (data) {
-                            if (data.status == 200) {
-                                $("#setForm")[0].reset();
-                                $("#setSection").hide();
-                                $("#setUpdateSection").hide();
-                                $("#response").show();
-                                $("#response").empty().append("<h3>Member registered successfully</h3><br><br><button type=\"submit\" class=\"back\">Back to Members List <i class=\"fas fa-undo-alt\"></i></button> ");
-                            } else {
-                                console.log("Error servidor get");
+                    validation = $("#setForm").find(".invalid");
+                    if (validation.length > 0 ){
+                        $("#setMessages").empty().append("Revisa los campos");
+                    } else {
+                        values = $("#setForm").serializeObject();
+                        values.password = forge_sha256($("#password").val());
+                        data = {"ob": "member", "op": "set", "json": JSON.stringify(values)};
+                        $.ajax({
+                            type: "POST",
+                            url: "http://127.0.0.1:8080/fanlist/server/Controller.php",
+                            data: data,
+                            dataType: "json",
+                            success: function (data) {
+                                if (data.status == 200) {
+                                    $("#setForm")[0].reset();
+                                    $("#setSection").hide();
+                                    $("#setUpdateSection").hide();
+                                    $("#response").show();
+                                    $("#response").empty().append("<h3>Member registered successfully</h3><br><br><button type=\"submit\" class=\"back\">Back to Members List <i class=\"fas fa-undo-alt\"></i></button> ");
+                                } else {
+                                    console.log("Error servidor get");
+                                }
+                            },
+                            error: function (data) {
+                                console.log("Error cliente get");
                             }
-                        },
-                        error: function (data) {
-                            console.log("Error cliente get");
-                        }
-                    });
+                        });
+                    }
                 })
                 $("#setUpdate").click(function () {
                     validation = $("#setUpdateForm").find(".invalid");
